fix: remove fabricated stats from production contracts
Stage 1 of the identity/rating/profile evolution plan. Absence, unavailability
and calibration become explicit states instead of substitute numbers.

- drop the local Kurage ID fallback: PostgreSQL is the only generator and a
  failure now surfaces instead of minting a divergent ID
- gate ranking position, level and ELO on PlayerStats.isCalibrated() so accounts
  under the five-match screening are not classified
- remove the fixed 1.00 hovercard rating and the substitute ELO/level from the
  hovercard, search, ranking and profile contracts; they are nullable now
- stop recording a profile visit as a side effect of reading a profile; the
  client posts the visit explicitly
- reduce ProfileVisitorResponse to what the UI renders and authorize the
  visitors query by the observer, for any target profile
- replace the mocked RankingServiceTest with real PostgreSQL coverage and add
  ProfileVisitPostgresRedisIT
- add the ProfileVisitors component and record the plan in docs/pt/19

Validated: backend 161 unit tests green; frontend lint clean, 29/29 tests, and
a successful production build. Integration (verify -Pintegration) is NOT run
here because the Docker Engine is unavailable on this machine; it remains the
next required validation.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018x8sKCX2HiXR3iGYVVtu57