@@ -5,17 +5,20 @@ import com.kurage.api.domain.ProfileVisit;
 import com.kurage.api.domain.User;
 import com.kurage.api.dto.response.ProfileVisitorResponse;
 import com.kurage.api.repository.ProfileVisitRepository;
+import com.kurage.api.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.redis.core.StringRedisTemplate;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.time.Duration;
+import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -23,6 +26,7 @@ import java.util.stream.Collectors;
 public class ProfileVisitService {
 
     private final ProfileVisitRepository profileVisitRepository;
+    private final UserRepository userRepository;
     private final PermissionService permissionService;
     private final StringRedisTemplate redisTemplate;
 
@@ -54,7 +58,12 @@ public class ProfileVisitService {
                 }
             });
         } catch (Exception e) {
-            log.warn("Redis unavailable for profile visit rate limit debounce (proceeding with db save): {}", e.getMessage());
+            log.warn("Redis unavailable for profile visit debounce; checking PostgreSQL: {}", e.getMessage());
+            Instant oneHourAgo = Instant.now().minus(Duration.ofHours(1));
+            if (profileVisitRepository.existsByVisitedUserIdAndVisitorUserIdAndVisitedAtGreaterThanEqual(
+                    visitedUser.getId(), visitorUser.getId(), oneHourAgo)) {
+                return;
+            }
         }
 
         ProfileVisit visit = ProfileVisit.builder()
@@ -64,40 +73,51 @@ public class ProfileVisitService {
         profileVisitRepository.save(visit);
     }
 
+    @Transactional
+    public void recordVisitByKurageId(Long visitedKurageId, User visitorUser) {
+        if (visitorUser == null) {
+            throw new AccessDeniedException("User must be authenticated");
+        }
+        User visitedUser = findUser(visitedKurageId);
+        recordVisit(visitedUser, visitorUser);
+    }
+
     @Transactional(readOnly = true)
-    public List<ProfileVisitorResponse> getRecentVisitors(User user, int limit) {
-        if (user == null) {
+    public List<ProfileVisitorResponse> getRecentVisitors(User viewer, Long visitedKurageId, int limit) {
+        if (viewer == null) {
             throw new AccessDeniedException("User must be authenticated");
         }
 
-        if (!permissionService.hasFeature(user, "PROFILE_VISITORS")) {
+        if (!permissionService.hasFeature(viewer, "PROFILE_VISITORS")) {
             throw new AccessDeniedException("Recurso disponível para assinantes Maré.");
         }
 
-        int pageSize = Math.min(Math.max(limit, 1), 50);
-        List<ProfileVisit> visits = profileVisitRepository.findRecentVisitors(user.getId(), PageRequest.of(0, pageSize));
+        User visitedUser = findUser(visitedKurageId);
+        int pageSize = Math.min(Math.max(limit, 1), 20);
+        List<ProfileVisit> visits = profileVisitRepository.findRecentVisitors(
+                visitedUser.getId(), PageRequest.of(0, pageSize));
 
         return visits.stream()
-                .map(pv -> {
-                    User visitor = pv.getVisitorUser();
-                    int level = 1;
-                    int elo = 200;
-                    if (visitor.getPlayerStats() != null) {
-                        elo = visitor.getPlayerStats().getKurageElo() != null ? visitor.getPlayerStats().getKurageElo() : 200;
-                        level = visitor.getPlayerStats().getKurageLevel();
-                    }
-                    return new ProfileVisitorResponse(
-                            visitor.getId(),
-                            visitor.getKurageId(),
-                            visitor.getUsername(),
-                            visitor.getAvatarUrl(),
-                            visitor.getCountry(),
-                            level,
-                            elo,
-                            visitor.isVerifiedPro(),
-                            pv.getVisitedAt()
-                    );
-                })
-                .collect(Collectors.toList());
+                .map(pv -> new ProfileVisitorResponse(
+                        pv.getVisitorUser().getId(),
+                        pv.getVisitorUser().getKurageId(),
+                        pv.getVisitorUser().getUsername(),
+                        pv.getVisitorUser().getAvatarUrl(),
+                        pv.getVisitedAt()
+                ))
+                .toList();
+    }
+
+    @Transactional(readOnly = true)
+    public List<ProfileVisitorResponse> getRecentVisitors(User viewer, int limit) {
+        return getRecentVisitors(viewer, viewer.getKurageId(), limit);
+    }
+
+    private User findUser(Long kurageId) {
+        if (kurageId == null) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Kurage ID is required");
+        }
+        return userRepository.findByKurageId(kurageId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Perfil não encontrado."));
     }
 }
